--- a/src/app/notification/notification/notification.component.html
+++ b/src/app/notification/notification/notification.component.html
@@ -10,6 +10,9 @@
           <div class="content">
             {{ notification.content }}
           </div>
+          <div class="timestamp">
+            {{ notification.timestamp }}
+          </div>
         </div>
       </div>
 
