[ADD] - Add initial manage event types table and tab

--- a/src/app/admin-dashboard/categories/admin-categories-suggestions-management/admin-categories-suggestions-management.component.html
+++ b/src/app/admin-dashboard/categories/admin-categories-suggestions-management/admin-categories-suggestions-management.component.html
@@ -2,7 +2,10 @@
   <mat-tab label="Categories">
     <app-admin-approved-categories-management></app-admin-approved-categories-management>
   </mat-tab>
-  <mat-tab label="Suggestions">
+  <mat-tab label="Category suggestions">
     <app-admin-suggestions-management></app-admin-suggestions-management>
+  </mat-tab>
+  <mat-tab label="Event types">
+    <app-admin-event-types-management></app-admin-event-types-management>
   </mat-tab>
 </mat-tab-group>
