--- a/src/app/admin-dashboard/categories/admin-suggestions-management/admin-suggestions-management.component.html
+++ b/src/app/admin-dashboard/categories/admin-suggestions-management/admin-suggestions-management.component.html
@@ -9,7 +9,7 @@
         <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
       </ng-container>
 
-      <!-- For Prodcut Column -->
+      <!-- For Product Column -->
       <ng-container matColumnDef="forProduct">
         <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> For Product </th>
         <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
