--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -12,7 +12,7 @@
   <div class="table-container mat-elevation-z8">
     <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
       <!-- Name Column -->
-      <ng-container matColumnDef="eventName">
+      <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="name-header"> Name </th>
         <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
       </ng-container>
@@ -23,26 +23,31 @@
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="active">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
+        <td mat-cell *matCellDef="let element"> {{ element.isDeactivated ? 'No' : 'Yes' }} </td>
+      </ng-container>
+
       <!-- Suggested Categories Column -->
-      <ng-container matColumnDef="suggestedCategories">
+      <ng-container matColumnDef="suggestedSolutionCategories">
         <th mat-header-cell *matHeaderCellDef> Suggested Categories </th>
-        <td mat-cell *matCellDef="let element"> {{element.suggestedCategories}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.suggestedSolutionCategories?.join(', ') || '-' }} </td>
       </ng-container>
 
       <!-- Events Column -->
       <ng-container matColumnDef="events">
         <th mat-header-cell *matHeaderCellDef> Events </th>
-        <td mat-cell *matCellDef="let element"> {{element.events}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.events?.join(', ') || '-' }} </td>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="actions-header"> Actions </th>
         <td mat-cell *matCellDef="let element" class="actions-cell">
-          <button mat-icon-button (click)="edit(element)" [ngStyle]="{color: 'var(--primary-color)'}">
+          <button mat-icon-button (click)="edit(element)"  [disabled]="element.isDeactivated" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--primary-color)'}">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="remove(element)" [ngStyle]="{ color: 'var(--error-color)' }">
+          <button mat-icon-button [disabled]="element.isDeactivated" (click)="remove(element)" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--error-color)' }">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
