--- a/src/app/admin-dashboard/eventTypes/edit-event-type/edit-event-type.component.html
+++ b/src/app/admin-dashboard/eventTypes/edit-event-type/edit-event-type.component.html
@@ -1,1 +1,17 @@
-<p>edit-event-type works!</p>
+<h2 mat-dialog-title>Edit {{ eventTypeToEdit.name }}</h2>
+
+<mat-dialog-content>
+  <form [formGroup]="editEventTypeForm">
+    <div class="form-container">
+      <mat-form-field appearance="fill">
+        <mat-label>Description</mat-label>
+        <textarea matInput placeholder="Enter description" formControlName="description"></textarea>
+      </mat-form-field>
+    </div>
+  </form>
+</mat-dialog-content>
+
+<mat-dialog-actions class="actions-container">
+  <button mat-raised-button mat-dialog-close class="cancel-button">CANCEL</button>
+  <button mat-raised-button (click)="update()" class="primary-button">SAVE</button>
+</mat-dialog-actions>
