[ADD] - Add editing event types

--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -1,5 +1,5 @@
 <div class="component">
-  <h2 class="title">Manage Event Types</h2>
+  <h2 class="title">Manage event types</h2>
 
   <!-- Toolbar with CREATE button -->
   <div class="toolbar">
