--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -3,7 +3,7 @@
 
   <!-- Toolbar with CREATE button -->
   <div class="toolbar">
-    <button mat-raised-button class="create-button">
+    <button mat-raised-button class="create-button" (click)="create()">
       <mat-icon>add</mat-icon>
       CREATE
     </button>
