--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="table-container mat-elevation-z8">
-    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
+    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" matSort>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="name-header"> Name </th>
@@ -30,13 +30,13 @@
 
       <!-- Suggested Categories Column -->
       <ng-container matColumnDef="suggestedSolutionCategories">
-        <th mat-header-cell *matHeaderCellDef> Suggested Categories </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Suggested Categories </th>
         <td mat-cell *matCellDef="let element"> {{element.suggestedSolutionCategories?.join(', ') || '-' }} </td>
       </ng-container>
 
       <!-- Events Column -->
       <ng-container matColumnDef="events">
-        <th mat-header-cell *matHeaderCellDef> Events </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Events </th>
         <td mat-cell *matCellDef="let element"> {{element.events?.join(', ') || '-' }} </td>
       </ng-container>
 
@@ -44,7 +44,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="actions-header"> Actions </th>
         <td mat-cell *matCellDef="let element" class="actions-cell">
-          <button mat-icon-button (click)="edit(element)"  [disabled]="element.isDeactivated" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--primary-color)'}">
+          <button mat-icon-button (click)="edit(element)" [disabled]="element.isDeactivated" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--primary-color)'}">
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button [disabled]="element.isDeactivated" (click)="remove(element)" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--error-color)' }">
