--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -60,18 +60,20 @@
           </mat-form-field>
 
 
-          <div class="profile-pic" *ngIf="currentStep === 0">
-            <input type="file" id="profilePic" (change)="onFileSelected($event)" style="display: none;" accept="image/*" />
-            <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput()" *ngIf="!imagePreview">
-              UPLOAD PROFILE PICTURE (OPTIONAL)
-            </button>
-
-            <!-- Image Preview Section -->
-            <div class="image-preview" *ngIf="imagePreview">
-              <img [src]="imagePreview" alt="Profile Preview" />
-              <button mat-icon-button aria-label="Remove Image" class="image-close-btn" type="button" (click)="clearImage()">
-                <mat-icon>close</mat-icon>
+          <div class="form-column">
+            <div class="profile-pic">
+              <input type="file" id="profilePic" (change)="onProfileImageSelected($event)" style="display: none;" accept="image/*" />
+              <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput(0)" *ngIf="!imagePreview">
+                UPLOAD PROFILE PICTURE (OPTIONAL)
               </button>
+
+              <!-- Image Preview Section -->
+              <div class="image-preview" *ngIf="imagePreview">
+                <img [src]="imagePreview" alt="Profile Preview" />
+                <button mat-icon-button aria-label="Remove Image" class="image-close-btn" type="button" (click)="clearProfileImage()">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </div>
             </div>
           </div>
 
@@ -141,16 +143,16 @@
 
 
 
-          <div class="profile-pic">
-            <input type="file" id="companyPictures" (change)="onFileSelected($event)" style="display: none;" accept="image/*" multiple />
-            <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput()" *ngIf="companyImages.length === 0">
+          <div class="form-column">
+            <input type="file" id="companyPictures" (change)="onCompanyImageSelected($event)" style="display: none;" accept="image/*" multiple />
+            <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput(1)" *ngIf="companyImages.length === 0">
               UPLOAD COMPANY PICTURES (OPTIONAL)
             </button>
 
-            <!-- Multiple Image Preview Section -->
+            <!-- Image Preview and Cropping Section -->
             <div class="image-preview" *ngIf="companyImages.length > 0">
-              <div *ngFor="let image of companyImages; let i = index">
-                <img [src]="image" alt="Company Preview {{i + 1}}" />
+              <div *ngFor="let image of companyImages; let i = index" class="company-image-preview">
+                <img [src]="image.cropped || image.src" alt="Company Preview {{i + 1}}" />
                 <button mat-icon-button aria-label="Remove Image" class="image-close-btn" type="button" (click)="clearCompanyImage(i)">
                   <mat-icon>close</mat-icon>
                 </button>
