--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -31,7 +31,7 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Phone Number</mat-label>
-            <input matInput placeholder="Phone Number" formControlName="phoneNumber" />
+            <input matInput placeholder="Phone Number" formControlName="phoneNumber" type="number" />
             <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
               Phone number must be at least 8 digits
             </mat-error>
@@ -135,7 +135,7 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Phone Number</mat-label>
-            <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" />
+            <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" type="number" />
             <mat-error *ngIf="registerForm.get('companyPhoneNumber')?.hasError('required')">
               Phone Number is required
             </mat-error>
@@ -145,7 +145,7 @@
 
           <div class="form-column">
             <input type="file" id="companyPictures" (change)="onCompanyImageSelected($event)" style="display: none;" accept="image/*" multiple />
-            <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput(1)" *ngIf="companyImages.length === 0">
+            <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput(1)">
               UPLOAD COMPANY PICTURES (OPTIONAL)
             </button>
 
