[ADD] - Add linking to database for category manipulation

--- a/src/app/admin-dashboard/categories/admin-approved-categories-management/admin-approved-categories-management.component.html
+++ b/src/app/admin-dashboard/categories/admin-approved-categories-management/admin-approved-categories-management.component.html
@@ -29,7 +29,7 @@
           <button mat-icon-button (click)="edit(element)" [ngStyle]="{color: 'var(--primary-color)'}">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button [disabled]="!element.isDeletable" (click)="remove(element)" [ngStyle]="{ color: element.isDeletable ? 'var(--error-color)' : 'var(--disabled-color)' }">
+          <button mat-icon-button [disabled]="element.eventTypes?.length > 0" (click)="remove(element)" [ngStyle]="{ color: element.eventTypes?.length > 0 ? 'var(--disabled-color)' : 'var(--error-color)'  }">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
