--- a/src/app/admin-dashboard/categories/admin-approved-categories-management/admin-approved-categories-management.component.html
+++ b/src/app/admin-dashboard/categories/admin-approved-categories-management/admin-approved-categories-management.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="table-container mat-elevation-z8">
-    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
+    <table mat-table [dataSource]="dataSource" class="mat-table" matSort>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> Name </th>
