--- a/src/app/admin-dashboard/categories/admin-suggestions-management/admin-suggestions-management.component.html
+++ b/src/app/admin-dashboard/categories/admin-suggestions-management/admin-suggestions-management.component.html
@@ -2,7 +2,7 @@
   <h2 class="title">Manage category suggestions</h2>
 
   <div class="table-container mat-elevation-z8">
-    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
+    <table mat-table [dataSource]="dataSource" class="mat-table" matSort>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> Name </th>
@@ -12,7 +12,7 @@
       <!-- For Product Column -->
       <ng-container matColumnDef="forProduct">
         <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> For Product </th>
-        <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element" class="name-cell"> {{element.product.name}} </td>
       </ng-container>
 
       <!-- Actions Column -->
