--- a/src/app/admin-dashboard/categories/edit-suggestion/edit-suggestion.component.html
+++ b/src/app/admin-dashboard/categories/edit-suggestion/edit-suggestion.component.html
@@ -1,5 +1,5 @@
 <div class="component">
-  <h2 mat-dialog-title>Choose fitting category <br> for <b>Candles</b></h2>
+  <h2 mat-dialog-title>Choose fitting category <br> for <b>{{ data.product.name }}</b></h2>
 
 
   <mat-dialog-content>
@@ -8,17 +8,8 @@
         <mat-form-field appearance="fill">
           <mat-label>Category</mat-label>
           <mat-select formControlName="category">
-            <mat-option value="Category 1">
-              Category 1
-            </mat-option>
-            <mat-option value="Category 1">
-              Category 2
-            </mat-option>
-            <mat-option value="Category 1">
-              Category 3
-            </mat-option>
-            <mat-option value="Category 1">
-              Category 4
+            <mat-option *ngFor="let category of data.categories" [value]="category.id">
+              {{ category.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
