--- a/src/app/services/create-service/create-service.component.html
+++ b/src/app/services/create-service/create-service.component.html
@@ -27,17 +27,8 @@
         <mat-form-field appearance="fill">
           <mat-label>Category</mat-label>
           <mat-select formControlName="category">
-            <mat-option value="Category 1">
-               Category 1
-            </mat-option>
-            <mat-option value="Category 1">
-               Category 2
-            </mat-option>
-            <mat-option value="Category 1">
-               Category 3
-            </mat-option>
-            <mat-option value="Category 1">
-               Category 4
+            <mat-option *ngFor="let category of categories" [value]="category.id">
+              {{ category.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -45,17 +36,8 @@
         <mat-form-field appearance="fill">
           <mat-label>Event Type</mat-label>
           <mat-select formControlName="eventType" multiple>
-            <mat-option value="Event type 1">
-               Event type 1
-            </mat-option>
-            <mat-option value="Event type 2">
-               Event type 2
-            </mat-option>
-            <mat-option value="Event type 3">
-               Event type 3
-            </mat-option>
-            <mat-option value="Event type 4">
-               Event type 4
+            <mat-option *ngFor="let eventType of filteredEventTypes" [value]="eventType.id">
+              {{ eventType.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
