--- a/src/app/authentication/register/organizer-register/organizer-register.component.html
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.html
@@ -102,9 +102,9 @@
 
     <div class="button-group">
       <button mat-raised-button class="back-button" routerLink="/register">BACK</button>
-      <button mat-raised-button
-              class="register-button"
-              (click)="onSubmit()">REGISTER</button>
+
+      <button mat-raised-button class="register-button" type="submit">REGISTER</button>
+
     </div>
 
   </form>
